@@ -1,6 +1,6 @@
 <?php
 /*****************************************************************************
- *   Copyright (C) 2006-2008 by Ivan Y. Khvostishkov, Konstantin V. Arkhipov *
+ *   Copyright (C) 2006-2009 by Ivan Y. Khvostishkov, Konstantin V. Arkhipov *
  *                                                                           *
  *   This program is free software; you can redistribute it and/or modify    *
  *   it under the terms of the GNU Lesser General Public License as          *
@@ -18,6 +18,11 @@
 		public function getTypeName()
 		{
 			return 'Scalar';
+		}
+		
+		public function isObjectType()
+		{
+			return false;
 		}
 		
 		public function getList()
