@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006-2008 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2006-2009 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -13,9 +13,14 @@
 	/**
 	 * @ingroup Primitives
 	**/
-	class PrimitiveIdentifier extends IdentifiablePrimitive
+	abstract class PrimitiveIdentifier extends IdentifiablePrimitive
 	{
 		private $methodName	= 'getById';
+		
+		public function isObjectType()
+		{
+			return false;
+		}
 		
 		/**
 		 * @throws WrongArgumentException
