@@ -429,7 +429,7 @@
 			
 			Cache::me()->clean();
 			
-			$prm = Primitive::identifier('id')->of('TestBinaryStuff');
+			$prm = Primitive::prototypedIdentifier('TestBinaryStuff', 'id');
 			
 			$this->assertTrue($prm->import(array('id' => $id)));
 			$this->assertSame($prm->getValue()->getId(), $id);
